--- a/index.html
+++ b/index.html
@@ -3,122 +3,84 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chatbox</title>
+  <title>Keyboard Confessional</title>
   <style>
-    body {
-      font-family: sans-serif;
-      background: #f5f5f5;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
-    }
-    #chat {
-      width: 100%;
-      max-width: 500px;
-      height: 400px;
-      background: #fff;
-      border: 1px solid #ddd;
-      overflow-y: auto;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
-    #input {
-      width: 100%;
-      max-width: 500px;
-      display: flex;
-    }
-    #message {
-      flex: 1;
-      padding: 10px;
-      font-size: 1em;
-    }
-    #send {
-      padding: 10px 20px;
-    }
-    .msg {
-      margin-bottom: 10px;
-    }
+    * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #000;
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  display: flex;
+  width: 90%;
+  max-width: 1200px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left {
+  max-width: 50%;
+}
+
+.keyboard, .confessional {
+  font-size: 2.5rem;
+  letter-spacing: 2px;
+}
+
+.tagline {
+  margin: 1rem 0;
+  font-style: italic;
+  font-size: 1rem;
+}
+
+.auth-links {
+  margin-top: 2rem;
+}
+
+.link {
+  color: white;
+  text-decoration: none;
+  margin-right: 2rem;
+  font-size: 1rem;
+  border-bottom: 1px solid white;
+  padding-bottom: 2px;
+}
+
+.link:hover {
+  color: #aaa;
+  border-color: #aaa;
+}
+
+.right .bubble {
+  max-width: 400px;
+  width: 100%;
+}
+
   </style>
 </head>
 <body>
-  <h1>Chatbox</h1>
-  <div id="chat"></div>
-  <div id="input">
-    <input id="message" placeholder="Type a message..." />
-    <button id="send">Send</button>
+  <div class="container">
+    <div class="left">
+      <h1><span class="keyboard">KEYBOARD</span><br/><span class="confessional">CONFESSIONAL</span></h1>
+      <p class="tagline">"Talk it out. I’m not listening, but I’ll respond."</p>
+      <div class="auth-links">
+        <a href="auth.html" class="link">Click here to Begin</a>
+      </div>
+    </div>
+    <div class="right">
+      <img src="speech-bubble-placeholder.png" alt="Speech Bubble" class="bubble"/>
+    </div>
   </div>
-<script type="module">
-  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
-
-  const SUPABASE_URL = 'https://jxniwfvhiqtswurmzdat.supabase.co';
-  const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4bml3ZnZoaXF0c3d1cm16ZGF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgyMTc3NDUsImV4cCI6MjA2Mzc5Mzc0NX0.Kl5i2lYp27uGaQiEdgp5wjQ58Dvue-b0VXECe2yZyrw';
-  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-  console.log(supabase);
-
-  const chat = document.getElementById('chat');
-  const input = document.getElementById('message');
-  const sendBtn = document.getElementById('send');
-
-  async function loadMessages() {
-    const { data, error } = await supabase
-      .from('messages')
-      .select('*')
-      .order('created_at', { ascending: true });
-
-    if (error) {
-      console.error('Error loading messages:', error);
-      return;
-    }
-
-    chat.innerHTML = '';
-    data.forEach(msg => {
-      const div = document.createElement('div');
-      div.className = 'msg';
-      div.textContent = msg.content;
-      chat.appendChild(div);
-    });
-
-    chat.scrollTop = chat.scrollHeight;
-  }
-
-  async function sendMessage() {
-    const text = input.value.trim();
-    if (text === '') return;
-
-    const { error } = await supabase.from('messages').insert({ content: text });
-    if (error) {
-      console.error('Error sending message:', error);
-      return;
-    }
-
-    input.value = '';
-  }
-
-  sendBtn.addEventListener('click', sendMessage);
-  input.addEventListener('keypress', e => {
-    if (e.key === 'Enter') sendMessage();
-  });
-
-  // Real-time subscription using Supabase JS v2
-  supabase
-    .channel('chat-messages')
-    .on('postgres_changes', {
-      event: 'INSERT',
-      schema: 'public',
-      table: 'messages'
-    }, payload => {
-      const div = document.createElement('div');
-      div.className = 'msg';
-      div.textContent = payload.new.content;
-      chat.appendChild(div);
-      chat.scrollTop = chat.scrollHeight;
-    })
-    .subscribe();
-
-  loadMessages();
-</script>
-
 </body>
 </html>
