--- a/auth.html
+++ b/auth.html
@@ -60,8 +60,8 @@ body {
   animation: fadeIn 0.3s ease;
 }
 
-#login-tab:checked ~ .form-container #login-form,
-#signup-tab:checked ~ .form-container #signup-form {
+#login-tab:checked ~ .form-container #login-form2,
+#signup-tab:checked ~ .form-container #signup-form2 {
   display: block;
 }
 
@@ -129,6 +129,7 @@ a {
     font-family: Arial, Helvetica, sans-serif;
 }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <header><a href="index.html">←</a><header>
@@ -144,8 +145,8 @@ a {
     <div class="form-container">
 
       <!-- LOG-IN FORM -->
-      <div class="form-box" id="login-form">
-        <form>
+      <div class="form-box" id="login-form2">
+        <form id="login-form">
           <label for="login-email">Email:</label>
           <input type="email" id="login-email" required>
 
@@ -158,8 +159,8 @@ a {
       </div>
 
       <!-- SIGN-UP FORM -->
-      <div class="form-box" id="signup-form">
-        <form>
+      <div class="form-box" id="signup-form2">
+        <form id="signup-form">
           <div class="name-fields">
             <div>
               <label for="first-name">First Name</label>
@@ -187,5 +188,7 @@ a {
 
     </div>
   </div>
+
+  <script src="auth.js"></script>
 </body>
 </html>
